Transfer to github

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-reproduction and summary of the contents of the book Python Machine Learning: Machine Learning and Deep Learning with Python, scikit-learn, and TensorFlow, 2nd Edition, by Sebastian Raschka and Vahid Mirjalili
+Reproduction and summary of the contents of the book Python Machine Learning: Machine Learning and Deep Learning with Python, scikit-learn, and TensorFlow, 2nd Edition, by Sebastian Raschka and Vahid Mirjalili
